Stop using connection tracking for ssh connections
There is an issue with newer kernels (it seems to happen with 4.15.x)
that when conntrack is reloaded while a connection has packets in
flight, this connection going forward is neither considered INVALID
nor RELATED nor ESTABLISHED by the stateful tracking. While this is
certainly a bug elsewhere, we can be nicer with the rest by not using
stateful tracking for ssh connections.

Change-Id: I5a82f0a0b7ddc1a58c12233fae5761569012eb11

--- a/templates/rules.erb
+++ b/templates/rules.erb
@@ -7,9 +7,9 @@
 -A openstack-INPUT -i lo -j ACCEPT
 -A openstack-INPUT -p icmp --icmp-type any -j ACCEPT
 #-A openstack-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
+# SSH outside stateful tracking to not interrupt existing connections on reload
+-A openstack-INPUT -m tcp -p tcp --dport 22 -j ACCEPT
 -A openstack-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-# SSH from anywhere
--A openstack-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
 # SNMP
 <% @snmp_v4hosts.each do |host| -%>
 -A openstack-INPUT -m udp -p udp --dport 161 -s <%= host %> -j ACCEPT
